<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JuniorSetUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40808080">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:text="@string/junior_advance_settings"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/your_name"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/insert_your_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/select_any_apps"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerJuniorSetUpApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="#FFFFFF"
                android:entries="@array/seniorSetUpApps"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/max_3_apps"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/juniorSetUpView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="#BFFFFFFF"
                android:hint="No APP selected"
                android:textSize="34sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fonts"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/Spinner"
                        android:layout_width="266dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:background="#FFFFFF"
                        android:entries="@array/seniorSetUpContacts"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                </TableRow>


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colors"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/Spinner"
                        android:layout_width="266dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:background="#FFFFFF"
                        android:entries="@array/seniorSetUpContacts"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/sizeSpinner"
                        android:layout_width="266dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:background="#FFFFFF"
                        android:entries="@array/seniorSetUpContacts"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </TableRow>


            </TableLayout>

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:max="10"
                android:minHeight="34dp"
                android:progress="10" />

            <Button
                android:id="@+id/startJunior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:backgroundTint="#000000"
                android:text="@string/set"
                android:textSize="34sp" />

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>